testing/tests/ui/filter-recursion.stderr
error: your template code is too deeply nested, or last expression is too complex
 --> testing/templates/filter-recursion.html:1:255
       "|A|AA|A|A|A|A|AA|A|A|A|A|AA|A|A|A|A|AA|A|A|A|A|AA|A|A|A|A|AA|A|A|A||A|A|AA|A|A|A|A|AA|A|A|A|A|AA|A|A|A|A|AA|A|A|A|A|AA|A"
 --> tests/ui/filter-recursion.rs:4:19
  |
4 | #[template(path = "filter-recursion.html")]
  |                   ^^^^^^^^^^^^^^^^^^^^^^^
